--- a/build.gradle
+++ b/build.gradle
@@ -291,11 +291,6 @@ project(":core"){
         }
     }
 
-    artifacts{
-        archives sourcesJar
-        archives assetsJar
-    }
-
     dependencies{
         compileJava.dependsOn(preGen)
 
@@ -410,6 +405,10 @@ configure([":core", ":server"].collect{project(it)}){
         publications{
             maven(MavenPublication){
                 from components.java
+                if(project.name == "core"){
+                    artifact(tasks.named("assetsJar"))
+//                    artifact(tasks.named("musicJar"))
+                }
             }
         }
     }
