--- a/gradle.properties
+++ b/gradle.properties
@@ -29,4 +29,4 @@ org.gradle.internal.http.socketTimeout=100000
 org.gradle.internal.http.connectionTimeout=100000
 
 upstreamBuild=146
-archash=152e49944a
+archash=v146
