--- a/build.gradle
+++ b/build.gradle
@@ -22,8 +22,8 @@ buildscript{
 }
 
 plugins{
-    id "org.jetbrains.kotlin.jvm" version "1.6.0"
-    id "org.jetbrains.kotlin.kapt" version "1.6.0"
+    id "org.jetbrains.kotlin.jvm" version "1.9.20"
+    id "org.jetbrains.kotlin.kapt" version "1.9.20"
 }
 
 allprojects{
@@ -361,9 +361,9 @@ project(":core"){
 
     gradle.taskGraph.whenReady{
         //these are completely unnecessary
-        tasks.kaptGenerateStubsKotlin.onlyIf{ false }
-        tasks.compileKotlin.onlyIf{ false }
-        tasks.inspectClassesForKotlinIC.onlyIf{ false }
+//         tasks.kaptGenerateStubsKotlin.onlyIf{ false }
+//         tasks.compileKotlin.onlyIf{ false }
+//         tasks.inspectClassesForKotlinIC.onlyIf{ false }
     }
 
     //comp** classes are only used for code generation
