--- a/core/assets/bundles/bundle-mdtx.properties
+++ b/core/assets/bundles/bundle-mdtx.properties
@@ -556,6 +556,10 @@ setting.arcShareMedia.name = 允许接受服务器及玩家发送的音乐和图
 setting.rotateCanvas.name = 蓝图旋转时会旋转画板内容 [orange]可能导致崩溃，小心使用
 setting.developMode.name = [red]开发者模式  [orange]不完善|测试中的功能，普通用户请不要打开。欢迎提出修复方案
 
+category.newUI.name = [acid]新ui
+setting.enableBlur.name = [cyan]启用高斯模糊ui
+setting.blurLevel.name = [cyan]模糊度
+setting.backBlurLen.name = [cyan]模糊强度
 
 settings.cheating = [red]作弊功能
 category.arcWeakCheat.name = 弱作弊功能
