--- a/ios/build.gradle
+++ b/ios/build.gradle
@@ -77,7 +77,7 @@ task deploy{
 }
 
 //must pack before deployment, as iOS never has the latest sprites.
-copyAssets.dependsOn ":tools:pack"
+copyAssets.dependsOn ":core:allAssets"
 copyAssets.dependsOn copyNatives
 launchIPhoneSimulator.dependsOn build
 launchIPadSimulator.dependsOn build
