--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,7 +7,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  deploy:
+  build:
     runs-on: ubuntu-latest
 
     steps:
@@ -58,5 +58,43 @@ jobs:
           tag_name: ${{ env.RELEASE_TAG }}
           name: ${{ env.RELEASE_VERSION }}
           target_commitish: ${{github.sha}}
+          files: artifacts/*
+          prerelease: true
+
+  ios:
+    needs: build
+    runs-on: macos-latest
+    strategy:
+      matrix:
+        memory: [ '16GB' ]
+
+    steps:
+      - uses: actions/checkout@v3
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
+        with:
+          distribution: 'temurin'
+          java-version: 17
+      - name: Setup Gradle
+        uses: gradle/actions/setup-gradle@v3
+      - name: Set env
+        run: |
+          echo "Memory: ${{ matrix.memory }}"
+          echo "RELEASE_TAG=${GITHUB_REF_NAME}-build" >> $GITHUB_ENV
+          echo "RELEASE_TAG=${GITHUB_REF_NAME}-build"
+          echo "RELEASE_VERSION=$(date +'%Y.%m.%d').${GITHUB_RUN_NUMBER}-${GITHUB_REF_NAME}" >> $GITHUB_ENV
+      - name: iOS deploy
+        run: ./gradlew ios:deploy -Pbuildversion=${RELEASE_VERSION}
+      - name: Move artifacts
+        run: |
+          ls -aR ios/build
+          mkdir artifacts
+          mv ios/build/robovm/IOSLauncher.ipa artifacts/MindustryX-${{env.RELEASE_VERSION}}-iOS.ipa
+      - name: Release
+        uses: softprops/action-gh-release@v1
+        with:
+          tag_name: ${{ env.RELEASE_TAG }}
+          name: ${{ env.RELEASE_VERSION }}
+          target_commitish: ${{github.ref}}
           files: artifacts/*
           prerelease: true
