--- a/core/assets/bundles/bundle-mdtx.properties
+++ b/core/assets/bundles/bundle-mdtx.properties
@@ -41,6 +41,33 @@ stat.ammo_capacity = 子弹容量
 
 #end StatExt
 
+# Settings
+settings.category.mindustryX = MindustryX扩展
+setting.showUpdateDialog.name = 检测到新版MindustryX时提示
+setting.githubMirror.name = GitHub镜像加速(WZ镜像)    [gray]优化全球服务器列表及Mod浏览器功能
+
+category.arcReWork.name = Arc功能重置
+setting.replayRecord.name = 多人游戏录像    [gray]自动录制游玩过程，输出在saves文件夹
+setting.menuFloatText.name = 首页悬浮文字
+setting.showAdvanceToolTable.name = 工具箱(左下角)
+setting.researchViewer.name = 科技树透视器
+setting.minimapSize.name = 小地图大小
+setting.maxSchematicSize.name = 最大蓝图大小
+
+category.blockSettings.name = 建筑相关设置
+setting.staticShieldsBorder.name = 静止力墙边界
+setting.arcTurretPlaceCheck.name = [pink]炮台[white]：范围检查
+setting.arcchoiceuiIcon.name = [acid]装卸|分类[white]：显示物品图标
+setting.HiddleItemTransparency.name = [acid]带桥/交叉器内物品[white]：不透明度
+setting.overdrive_zone.name = [acid]超速范围[white]：不透明度
+setting.arcPlacementEffect.name = [pink]建筑放置特效
+setting.blockbarminhealth.name = [acid]建筑属性显示[white]：血量最低限制
+
+category.entitySettings.name = 实体相关设置
+setting.bulletShow.name = 显示子弹
+setting.showminebeam.name = 显示单位挖掘光束
+#end Settings
+
 stat.reloadDetail = 装填：{0}%
 stat.warmupDetail = 充能：{0}%
 stat.ammoDetail = 弹药：{0}/{1}
@@ -392,7 +419,6 @@ setting.blockreplace.name = 允许覆盖建筑
 
 category.arcCAssist.name = 辅助功能
 setting.shiftCopyIcon.name = shift复制方块图标
-setting.maxSchematicSize.name = [acid]蓝图大小
 setting.crashreport.name = 发送匿名的崩溃报告
 
 category.arcCOverview.name = 全局设置
@@ -400,14 +426,12 @@ setting.uiscale.name = UI缩放比例   [orange][重启生效]
 
 category.arcCgamewindow.name = 游戏界面
 setting.override_boss_shown.name = [cyan]boss血条[orange][重启生效]
-setting.minimapSize.name = [acid]小地图[white]：大小
 setting.minimapTools.name = [acid]小地图[white]：工具箱
 
 category.arcCgameview.name = 游戏画面
 setting.alwaysshowdropzone.name = [cyan]刷怪点
 setting.showFlyerSpawn.name = [cyan]空军刷怪点
 setting.showFlyerSpawnLine.name = [cyan]空军刷怪点连线
-setting.HiddleItemTransparency.name = [acid]带桥/交叉器内物品[white]：不透明度
 
 category.arcCGraphicsOther.name = 其他
 
@@ -419,7 +443,6 @@ setting.changelogexplain.name = [acid]学术端改动内容非常多，为防止
 
 category.arcHudToolbox.name = 主游戏界面
 setting.AuxiliaryTable.name = [acid]辅助器     [orange][重启生效]
-setting.showAdvanceToolTable.name = [acid]工具箱
 setting.arccoreitems.name = [acid]arc核心物资   [gray]点击电量条
 setting.arcCoreItemsCol.name = [acid]arc核心物资列数
 setting.powerStatistic.name = [acid]电量统计     [orange][重启生效]
@@ -432,18 +455,14 @@ setting.hoveredTileInfo.name = [acid]显示鼠标指针地块/建筑名称
 setting.arcAlwaysTeamColor.name = [acid]玩家列表[white]：总是绘制队伍颜色
 
 category.arcAddBlockInfo.name = 更多建筑属性
-setting.overdrive_zone.name = [acid]超速范围[white]：不透明度
 setting.mend_zone.name = [acid]修复范围[white]：不透明度
 setting.blockdisabled.name = [cyan]建筑禁用显示
 setting.blockBars.name = [acid]建筑属性
-setting.blockbarminhealth.name = [acid]建筑属性显示[white]：血量最低限制
 setting.blockBars_mend.name = [acid]修复[white]：进度条
 setting.arcdrillmode.name = [acid]钻头[white]：常亮矿物
 setting.arcDrillProgress.name = [acid]钻头[white]：显示挖掘进度      [gray]只推荐mod下使用
-setting.arcchoiceuiIcon.name = [acid]装卸|分类[white]：显示物品图标
 setting.arclogicbordershow.name = [acid]显示屏与画板[white]：边框       [gray]关闭后多个显示屏会更好得拼接在一起
 setting.oneBlockProperty.name = [acid]复制单个建筑时展示属性       [orange]无需要不建议开启，会导致属性丢失
-setting.arcPlacementEffect.name = [pink]建筑放置特效
 
 category.arcMassDriverInfo.name = 质驱引导线
 setting.mass_driver_line_alpha.name = [acid]质驱引导线[white]：不透明度
@@ -454,7 +473,6 @@ category.arcAddTurretInfo.name = 更多炮台属性
 setting.showTurretAmmo.name = [acid]炮台[white]：子弹类型
 setting.showTurretAmmoAmount.name = [acid]炮台[white]：子弹数量
 setting.arcTurretPlacementItem.name = [pink]炮台[white]：弹药射界
-setting.arcTurretPlaceCheck.name = [pink]炮台[white]：范围检查
 setting.turretAlertRange.name = [acid]炮台[white]：警告范围
 setting.turretForceShowRange.name = [acid]炮台[white]：强制显示射程  [gray]可用于在编辑器下显示射程
 setting.turretShowRange.name = [acid]炮台[white]：射程
@@ -470,7 +488,6 @@ setting.unitBarDrawMinHealth.name = [acid]单位属性[white]：最低血量
 setting.unitWeaponRangeAlpha.name = [acid]单位武器射程[white]：不透明度
 setting.unitWeaponRange.name = [acid]单位武器射程[white]：范围警告
 setting.unitWeaponTargetLine.name = [acid]单位武器目标
-setting.showminebeam.name = [cyan]单位挖掘光束
 setting.unitItemCarried.name = [acid]单位携带的物品
 setting.unithitbox.name = [acid]单位碰撞箱
 setting.unitLogicMoveLine.name = [acid]控制[white]：移动路径
@@ -505,8 +522,6 @@ setting.arcDisableModWarning.name = [orange]我已知晓且同意学术端的mod
 setting.menuFlyersCount.name = 首页兵种数量调整
 setting.menuFlyersRange.name = 首页兵种显示射界
 setting.menuFlyersFollower.name = 首页兵种小弟模式
-setting.menuFloatText.name = 首页悬浮文字
-setting.showUpdateDialog.name = 检测到新版学术时弹窗
 setting.arcInfSchem.name = [cyan]无视加载蓝图大小限制  [red]谨防崩端
 
 settings.forcehide = [orange]帧率重调装置
@@ -515,15 +530,12 @@ setting.blockRenderLevel.name = [cyan]建筑渲染等级
 setting.displayblock.name = [cyan]工厂方块
 
 category.arcCDisplayEffect.name = 特效与效果
-setting.bulletShow.name = [acid]子弹
 setting.forceEnableDarkness.name = [cyan]厚墙体阴影
-setting.staticShieldsBorder.name = [cyan]静止力墙边界
 setting.limitupdate.name = [cyan]限制更新
 setting.limitdst.name = [cyan]视角外更新范围
 
 settings.specmode = [acid]更多内容适配
 category.moreContent.name = 更多内容适配
-setting.githubMirror.name = [cyan]GitHub镜像加速(WZ镜像)    [gray]优化全球服务器列表及Mod浏览器功能
 setting.modMode.name = [cyan]模组工厂支持器    [gray]针对部分模组工厂进行说明
 setting.itemSelectionHeight.name = [cyan]建筑选择框行数
 setting.itemSelectionWidth.name = [cyan]建筑选择框列数
@@ -540,7 +552,6 @@ setting.yuanshen.name = [cyan]原神，启动！
 setting.xibaoOnKick.name = [cyan]被踢出游戏时显示[gold]喜报
 category.specGameMode.name = 更多游戏功能
 setting.autoSelSchematic.name = [cyan]蓝图自动选择器      [orange]自动筛选包含选中物品的蓝图
-setting.researchViewer.name = [cyan]科技树透视器  [orange][重启生效]
 setting.arcShareMedia.name = 允许接受服务器及玩家发送的音乐和图片
 setting.rotateCanvas.name = 蓝图旋转时会旋转画板内容 [orange]可能导致崩溃，小心使用
 setting.developMode.name = [red]开发者模式  [orange]不完善|测试中的功能，普通用户请不要打开。欢迎提出修复方案
