--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,12 +39,13 @@ jobs:
           git submodule update --init --depth=10
           cd work
           ../scripts/applyPatches.sh
-          gradle desktop:dist server:dist -Pbuildversion=${RELEASE_VERSION}
+          gradle desktop:dist server:dist core:genLoaderModAll -Pbuildversion=${RELEASE_VERSION}
           
           cd ..
           mkdir artifacts
           mv work/desktop/build/libs/Mindustry.jar artifacts/MindustryX-${{env.RELEASE_VERSION}}-Desktop.jar
           mv work/server/build/libs/server-release.jar artifacts/server-${{env.RELEASE_VERSION}}.jar
+          mv work/core/build/distributions/MindustryX.loader.dex.jar artifacts/MindustryX-${{env.RELEASE_VERSION}}.loader.dex.jar
       - name: Build Android
         env:
           keystore_password: ${{ secrets.KEYSTORE_PASSWORD_SECRET }}
@@ -52,8 +53,6 @@ jobs:
           keystore_alias: MindustryX
         run: |
           cd work
-          sed -i 's/tinylake.mindustryX/tinylake.mindustryX.be/g' android/build.gradle
-          sed -i 's/MindustryX/MindustryX BE/g' android/res/values/strings.xml
           gradle android:assembleRelease -Pbuildversion=${RELEASE_VERSION}
           
           cd ..
