新功能：传送带快速替换(按住放置路由器/拖动为桥)

--- a/assets/bundles/bundle-mdtx.properties
+++ b/assets/bundles/bundle-mdtx.properties
@@ -139,6 +139,8 @@ keybind.point.name = 标记
 keybind.lockonLastMark.name = 定位到上个标记点
 keybind.toggle_block_render.name = 切换建筑显示
 keybind.toggle_unit.name = 切换单位显示
+keybind.focusLogicController.name = 锁定当前控制的处理器
+keybind.placeRouterReplacement.name = 传送带快速替换(路由器/桥)
 
 # 学术特色翻译
 ability.energyfield.maxtargets = [lightgray]最大目标: [white]{0}
