快速装填增加冷却; 雷达改用V2配置

--- a/assets/bundles/bundle-mdtx.properties
+++ b/assets/bundles/bundle-mdtx.properties
@@ -118,6 +118,12 @@ setting.renderSort.name = 渲染排序 [grey]多图集(Mod较多)情况下能够
 setting.limitupdate.name = 限制更新
 setting.limitdst.name = 限制更新-额外范围
 #end Settings
+#SettingsV2
+setting.autoFill.cooldown.name = 操作冷却(ms)
+setting.autoFill.cooldown.description = 过小的值可能导致被服务器踢出
+setting.radarMode.name = [acid]雷达模式
+setting.radarSize.name = [acid]雷达大小
+#end SettingsV2
 
 # editor增强
 toolmode.square2 = 方形(直径)
@@ -192,7 +198,6 @@ category.arcHudToolbox.name = 主游戏界面
 category.arcMassDriverInfo.name = 质驱引导线
 category.arcPlayerEffect.name = 玩家炫酷特效
 category.arcRTSSupporter.name = RTS支持器
-category.arcRadar.name = 雷达扫描设置 [lightgray](PC按键，手机辅助器)
 category.arcShareinfo.name = 多人游玩设置
 category.arcStrongCheat.name = [red]强作弊功能
 category.arcWeakCheat.name = 弱作弊功能
@@ -251,8 +256,6 @@ setting.overrideSkipWave.name = [acid]功能[white]：忽视跳波限制
 setting.playerEffectColor.name = [acid]玩家射程[white]：颜色
 setting.playerEffectCurStroke.name = [acid]玩家射程[white]：粗细
 setting.playerNeedShooting.name = [red]时间管理大师
-setting.radarMode.name = [acid]雷达模式
-setting.radarSize.name = [acid]雷达大小
 setting.rtsWoundUnit.name = [acid]单位筛选[white]：残血阈值
 setting.save_more_map.name = [acid]保存战役与编辑器地图
 setting.showFlyerSpawn.name = [cyan]空军刷怪点
