解除 显示其他队伍状态 PVP禁用的限制

--- a/assets/bundles/bundle-mdtx.properties
+++ b/assets/bundles/bundle-mdtx.properties
@@ -101,7 +101,7 @@ setting.overdrive_zone.name = 超速范围的不透明度
 setting.arcPlacementEffect.name = 建筑放置特效
 setting.blockbarminhealth.name = 建筑属性显示的血量最低限制
 setting.blockRenderLevel.name = 建筑渲染等级
-setting.showOtherTeamState.name = 显示其他队伍状态  [orange][PVP自动禁用]
+setting.showOtherTeamState.name = 显示其他队伍状态
 setting.editOtherBlock.name = 编辑其他队伍建筑     [yellow][单机可用]
 setting.logicDisplayNoBorder.name = 去除显示屏边框
 
