--- a/assets/bundles/bundle-mdtx.properties
+++ b/assets/bundles/bundle-mdtx.properties
@@ -120,6 +120,8 @@ setting.limitdst.name = 限制更新-额外范围
 #SettingsV2
 setting.autoFill.cooldown.name = 操作冷却(ms)
 setting.autoFill.cooldown.description = 过小的值可能导致被服务器踢出
+setting.autoFill.minFill.name = 最小装填个数
+setting.autoFill.fillStorageBlock.name = 允许往容器/仓库内填充
 setting.radarMode.name = [acid]雷达模式
 setting.radarSize.name = [acid]雷达大小
 #end SettingsV2
