新波次显示：优化开关按钮;增加核心资源相关设置

--- a/assets/bundles/bundle-mdtx.properties
+++ b/assets/bundles/bundle-mdtx.properties
@@ -77,8 +77,6 @@ setting.powerStatistic.name = 电量统计     [orange][重启生效]
 setting.showOtherTeamResource.name = 队伍资源显示(左中部)
 setting.showQuickToolTable.name = 快捷工具(右中部)    [gray]快捷设置/工具箱/建筑工具
 setting.quickToolOffset.name = 快捷工具偏置
-setting.arccoreitems.name = 核心物资显示   [gray]点击电量条可快捷切换
-setting.arcCoreItemsCol.name = 核心物资显示列数
 setting.itemSelectionHeight.name = 建筑选择框(右下角)行数
 setting.itemSelectionWidth.name = 建筑选择框(右下角)列数
 setting.blockInventoryWidth.name = 建筑物品栏(分类器)每行物品数
@@ -89,7 +87,6 @@ setting.colorizedContent.name = [orange]彩[yellow]色[acid]属[cyan]性[violet]
 setting.arcBackgroundPath.name = 首页自定义背景-路径
 setting.autoSelSchematic.name = 蓝图自动选择      [gray]打开蓝图时自动筛选
 setting.arcCommandTable.name = RTS扩展按钮
-setting.newWaveInfoDisplay.name = 新波次显示(中上部)
 
 category.blockSettings.name = 建筑相关设置
 setting.rotateCanvas.name = 蓝图旋转时会旋转画板内容 [orange]可能导致崩溃，小心使用
@@ -118,6 +115,7 @@ setting.limitupdate.name = 限制更新
 setting.limitdst.name = 限制更新-额外范围
 #end Settings
 #SettingsV2
+settingV2.reset = [red]恢复默认设置
 setting.autoFill.cooldown.name = 操作冷却(ms)
 setting.autoFill.cooldown.description = 过小的值可能导致被服务器踢出
 setting.autoFill.minFill.name = 最小装填个数
@@ -125,6 +123,11 @@ setting.autoFill.fillStorageBlock.name = 允许往容器/仓库内填充
 setting.autoFill.fillDistribution.name = 允许往塑钢/桥中填充
 setting.radarMode.name = [acid]雷达模式
 setting.radarSize.name = [acid]雷达大小
+setting.coreItems.columns.name = 显示列数
+setting.coreItems.showItem.name = 显示核心物品
+setting.coreItems.showUnit.name = 显示单位数量
+setting.coreItems.showPlan.name = 显示建筑中数量
+setting.newWaveInfoDisplay.name = 新波次显示(中上部)
 #end SettingsV2
 
 # editor增强
