--- a/assets/bundles/bundle-mdtx.properties
+++ b/assets/bundles/bundle-mdtx.properties
@@ -106,6 +106,10 @@ setting.bulletShow.name = 显示子弹
 setting.noPlayerHitBox.name = 取消玩家自身的碰撞 [gray]轻微作弊
 setting.payloadpreview.name = 载荷单位拾起预览
 setting.unithitbox.name = 显示单位碰撞箱
+setting.damagePopup.name = 血量跳字
+setting.healPopup.name = 回血跳字
+setting.playerPopupOnly.name = 仅玩家自己的伤害跳字(包括玩家控制的单位)
+setting.popupMinHealth.name = 跳字实体最低血量限制
 
 category.developerMode.name = 特殊设置
 setting.renderSort.name = 渲染排序 [grey]多图集(Mod较多)情况下能够提升50%渲染性能，但可能造成渲染错误
