--- a/assets/bundles/bundle-mdtx.properties
+++ b/assets/bundles/bundle-mdtx.properties
@@ -22,6 +22,14 @@ mdtx.qqLink = QQ交流群
 
 mdtx.share.item = {0}: 当前库存 {1}, 产量 {2}/s
 mdtx.share.unit = {0}: 当前数量 {1}, 上限 {2}
+
+commit.justNow = 刚刚
+commit.minutesAgo = {0} 分钟前
+commit.hoursAgo = {0} 小时前
+commit.daysAgo = {0} 天前
+commit.weeksAgo = {0} 星期前
+commit.monthsAgo = {0} 月前
+commit.yearsAgo = {0} 年前
 #end UI
 
 status.slow.name = 缓慢
