--- a/assets/bundles/bundle-mdtx.properties
+++ b/assets/bundles/bundle-mdtx.properties
@@ -23,6 +23,7 @@ mdtx.qqLink = QQ交流群
 mdtx.share.item = {0}: 当前库存 {1}, 产量 {2}/s
 mdtx.share.unit = {0}: 当前数量 {1}, 上限 {2}
 
+commit.title = 提交列表
 commit.justNow = 刚刚
 commit.minutesAgo = {0} 分钟前
 commit.hoursAgo = {0} 小时前
