--- a/assets/bundles/bundle-mdtx.properties
+++ b/assets/bundles/bundle-mdtx.properties
@@ -316,8 +316,8 @@ shield.phaseboost = [stat]+{0}[lightgray] 格 [stat]+{1}[] 护盾容量
 shield.regenspeed = [stat]{0}[lightgray]x 回复速度
 team.neoplastic.name = 瘤
 unit.anthicus-missile.name = 天灾导弹
-unit.disrupt-missile.name = 遏止导弹
-unit.quell-missile.name = 悲怆导弹
+unit.disrupt-missile.name = 悲怆导弹
+unit.quell-missile.name = 遏止导弹
 unit.scathe-missile.name = 创伤导弹
 waves.duplicate = 复制
 waves.group = 组
