📝 清理学术颜色使用 ✨ 直接更多Buff属性显示

--- a/assets/bundles/bundle-mdtx.properties
+++ b/assets/bundles/bundle-mdtx.properties
@@ -152,7 +152,7 @@ settingV2.terrainSchematic.name = 地形蓝图
 settingV2.terrainSchematic.description = 允许复制地形、墙体等到蓝图中，可配合创世神粘贴。
 
 settingV2.arcExtra.category = ARC-扩展功能
-settingV2.arcExtra.colorizedContent.name = [orange]彩[yellow]色[acid]属[cyan]性[violet]包
+settingV2.arcExtra.colorizedContent.name = 使用彩色物品名字[grey]可读性可能下降
 settingV2.arcExtra.backgroundPath.name = 首页-自定义背景
 settingV2.arcExtra.backgroundPath.description = 需要填写完整路径
 settingV2.arcExtra.radarMode.name = 雷达扫描速度
@@ -261,56 +261,56 @@ category.movement = 移动
 category.support = 支援
 content.planet.name = 星球
 content.weather.name = 天气
-revealedblocks = [acid]显示建筑
-rules.aiCoreSpawn = [acid]核心生成AI
-rules.canGameOver = [acid]能否自动结束游戏[gray](如果没有其他结束游戏的方法，不推荐开启)
-rules.cheat = [acid]作弊模式
-rules.coreDestroyClear = [acid]核心被破坏清理附近建筑
-rules.disableOutsideArea = [acid]禁用场外区域
+revealedblocks = 显示建筑
+rules.aiCoreSpawn = 核心生成AI
+rules.canGameOver = 能否自动结束游戏[gray](如果没有其他结束游戏的方法，不推荐开启)
+rules.cheat = 作弊模式
+rules.coreDestroyClear = 核心被破坏清理附近建筑
+rules.disableOutsideArea = 禁用场外区域
 rules.dynamicColor = 战争迷雾颜色-曾探索
-rules.hiddenBuildItems = [acid]隐藏需要所选材料建造的建筑
-rules.infiniteAmmo = [acid]单位无限子弹
-rules.logicUnitBuild = [acid]逻辑控制单位建造
+rules.hiddenBuildItems = 隐藏需要所选材料建造的建筑
+rules.infiniteAmmo = 单位无限子弹
+rules.logicUnitBuild = 逻辑控制单位建造
 rules.staticColor = 战争迷雾颜色-未探索
 rules.title.arcExperimental = 隐藏设置[red](实验性功能，可能影响稳定性)
-rules.unitPayloadUpdate = [acid]单位携带的方块会工作
-rules.winWave = [acid]胜利波次  [gray](到达指定波次后自动停止)
+rules.unitPayloadUpdate = 单位携带的方块会工作
+rules.winWave = 胜利波次  [gray](到达指定波次后自动停止)
 schematic.preview = 预览
-setting.alwaysShowUnitRTSAi.name = [acid]单位[white]：执行的RTS命令
-setting.arcAlwaysTeamColor.name = [acid]玩家列表[white]：总是绘制队伍颜色
+setting.alwaysShowUnitRTSAi.name = 单位：执行的RTS命令
+setting.arcAlwaysTeamColor.name = 玩家列表：总是绘制队伍颜色
 setting.arcBuildInfo.name = [cyan]建造范围
-setting.arcdrillmode.name = [acid]钻头[white]：常亮矿物
-setting.blockBars.name = [acid]建筑属性
-setting.blockBars_mend.name = [acid]修复[white]：进度条
-setting.blockWeaponTargetLine.name = [acid]炮台[white]：瞄准线
-setting.blockWeaponTargetLineWhenIdle.name = [acid]炮台[white]：瞄准线（闲置）
-setting.blockdisabled.name = [cyan]建筑禁用显示
-setting.hoveredTileInfo.name = [acid]显示鼠标指针地块/建筑名称
+setting.arcdrillmode.name = 钻头：常亮矿物
+setting.blockBars.name = 建筑属性
+setting.blockBars_mend.name = 修复：进度条
+setting.blockWeaponTargetLine.name = 炮台：瞄准线
+setting.blockWeaponTargetLineWhenIdle.name = 炮台：瞄准线（闲置）
+setting.blockdisabled.name = 常显建筑禁用状态
+setting.hoveredTileInfo.name = 显示鼠标指针地块/建筑名称
 setting.mass_driver_line.name = 显示质驱引导线
-setting.mass_driver_line_color.name = [pink]质驱引导线[white]：颜色
-setting.mass_driver_line_interval.name = [acid]质驱引导线[white]：箭头间隔
-setting.overrideSkipWave.name = [acid]功能[white]：忽视跳波限制
-setting.playerEffectColor.name = [acid]玩家射程[white]：颜色
-setting.playerEffectCurStroke.name = [acid]玩家射程[white]：粗细
+setting.mass_driver_line_color.name = [pink]质驱引导线：颜色
+setting.mass_driver_line_interval.name = 质驱引导线：箭头间隔
+setting.overrideSkipWave.name = 功能：忽视跳波限制
+setting.playerEffectColor.name = 玩家射程：颜色
+setting.playerEffectCurStroke.name = 玩家射程：粗细
 setting.playerNeedShooting.name = [red]时间管理大师
-setting.rtsWoundUnit.name = [acid]单位筛选[white]：残血阈值
-setting.save_more_map.name = [acid]保存战役与编辑器地图
-setting.showTurretAmmo.name = [acid]炮台[white]：子弹类型
-setting.showTurretAmmoAmount.name = [acid]炮台[white]：子弹数量
+setting.rtsWoundUnit.name = 单位筛选：残血阈值
+setting.save_more_map.name = 保存战役与编辑器地图
+setting.showTurretAmmo.name = 炮台：子弹类型
+setting.showTurretAmmoAmount.name = 炮台：子弹数量
 setting.superUnitEffect.name = [pink]玩家特效射程
-setting.turretAlertRange.name = [acid]炮台[white]：警告范围
-setting.turretForceShowRange.name = [acid]炮台[white]：强制显示射程  [gray]可用于在编辑器下显示射程
-setting.turretShowRange.name = [acid]炮台[white]：射程
-setting.unitHealthBar.name = [acid]单位属性
-setting.unitItemCarried.name = [acid]单位携带的物品
-setting.unitLogicMoveLine.name = [acid]控制[white]：移动路径
-setting.unitLogicTimerBars.name = [acid]控制[white]：时间条
+setting.turretAlertRange.name = 炮台：警告范围
+setting.turretForceShowRange.name = 炮台：强制显示射程  [gray]可用于在编辑器下显示射程
+setting.turretShowRange.name = 炮台：射程
+setting.unitHealthBar.name = 单位属性
+setting.unitItemCarried.name = 单位携带的物品
+setting.unitLogicMoveLine.name = 控制：移动路径
+setting.unitLogicTimerBars.name = 控制：时间条
 setting.unitTargetType.name = [pink]玩家的目标风格
-setting.unitWeaponRange.name = [acid]单位武器射程[white]：范围警告
-setting.unitWeaponRangeAlpha.name = [acid]单位武器射程[white]：不透明度
-setting.unitWeaponTargetLine.name = [acid]单位武器目标
-setting.unitbuildplan.name = [acid]单位[white]：建造序列显示
-settings.arc = [cyan]学术功能
+setting.unitWeaponRange.name = 单位武器射程：范围警告
+setting.unitWeaponRangeAlpha.name = 单位武器射程：不透明度
+setting.unitWeaponTargetLine.name = 单位武器目标
+setting.unitbuildplan.name = 单位：建造序列显示
+settings.arc = 学术功能
 settings.maxMsgRecorded.name = 最大聊天记录数
 shield.phaseboost = [stat]+{0}[lightgray] 格 [stat]+{1}[] 护盾容量
 shield.regenspeed = [stat]{0}[lightgray]x 回复速度
