--- a/assets/bundles/extra-description.properties
+++ b/assets/bundles/extra-description.properties
@@ -47,7 +47,7 @@ block.sorter.description = 空选强制令输入的物品转向，无容量
 block.inverted-sorter.description = 空选强制令输入的物品直行，无容量，可作为交叉器使用
 block.router.description = 将输入的物品平均分到4个方向\n如果串联成非环路由器带，则速度为7.5/s，传输物品速度很快\n单路由速度取决于帧率
 block.router.details = 在一些特殊情况下，串联路由器带可以接工厂并满效运行，但在大多数情况下会被堵塞
-block.distributor.description = 将输入的物品平均分到8个方向\n如果串联成非环分配器器带，则速度为7.5/s，传输物品速度极快（等于路由器+2光传串联带）\n单路由速度取决于帧率
+block.distributor.description = 将输入的物品平均分到8个方向\n如果串联成非环分配器带，则速度为7.5/s，传输物品速度极快（等于路由器+2光传串联带）\n单路由速度取决于帧率
 block.underflow-gate.description = 在制作传送带旁工厂时极其好用
 block.mass-driver.description = 可以造成少量伤害
 block.conduit.description = 传输速度约为1200/s，并受帧率和液压影响较大
@@ -147,11 +147,11 @@ unit.reign.description = 血牛，子弹无法穿透4层以上大墙壁
 unit.nova.description = 可以协助建造
 unit.pulsar.description = 一般用于协助建造或挖矿
 unit.quasar.description = 一般用于协助建造或挖矿，攻击时有后坐力
-unit.vela.description = 随身携带一个大修，遇塑钢墙阳痿
-unit.corvus.description = 打图神器，多死星齐射伤害可观，单体废物，遇塑钢墙阳痿
+unit.vela.description = 随身携带一个大修，遇塑钢墙效果不佳
+unit.corvus.description = 打图神器，多死星齐射伤害可观，单体废物，遇塑钢墙效果不佳
 unit.crawler.description = 前期最烦的单位，可以使用电弧或搬运硅冰雹防御
 unit.atrax.description = 可以给敌人上0.8x生命buff
-unit.spiroct.description = 唯 一 真 史
+unit.spiroct.description = 最没用的单位
 unit.arkyid.description = 适合打坦克
 unit.toxopid.description = 给敌人弱化效果，人称破阵子
 unit.flare.description = 没有防空的基地的噩梦
@@ -186,4 +186,3 @@ unit.collaris.description = 最远射程66格，分裂弹全命中60格，但是
 unit.elude.description = 全游陆地单位机动性最强，适合骚扰
 unit.avert.description = 全游血量密度最大单位，给所有没有穿透的炮塔以当头一棒
 unit.obviate.description = 有了它就有了制空权，爆发伤害可观
-unit.quell.description = 被遗忘
