--- a/assets/bundles/extra-description.properties
+++ b/assets/bundles/extra-description.properties
@@ -166,7 +166,7 @@ unit.bryde.description = 射程超长
 unit.sei.description = 海军性价比之王
 unit.omura.description = 容易被刷墙挡住
 unit.gamma.description = 可以挖煤
-unit.retusa.description = 修复最强的一集
+unit.retusa.description = 修复能力非常强
 unit.oxynoe.description = 可以给附近的单位上超频buff
 unit.cyerce.description = 配合戟鲸使用
 unit.aegires.description = 最强海辅，超强单位百分比修复
@@ -185,4 +185,5 @@ unit.collaris.description = 最远射程66格，分裂弹全命中60格，但是
 unit.elude.description = 全游陆地单位机动性最强，适合骚扰
 unit.avert.description = 全游血量密度最大单位，给所有没有穿透的炮塔以当头一棒
 unit.obviate.description = 有了它就有了制空权，爆发伤害可观
+
 
