--- a/assets/bundles/extra-description.properties
+++ b/assets/bundles/extra-description.properties
@@ -70,7 +70,6 @@ block.pneumatic-drill.description = 最好加水使用
 block.blast-drill.description = 一定要加水使用
 block.oil-extractor.description = 在页岩地上达到最高效率
 block.core-shard.description = 极其容易被星辉打爆
-block.launch-pad.description = 将货物发射至指定区块。
 block.landing-pad.description = 2回转泵供1着陆台
 block.duo.description = 可以通过短时间刷大量双管来击毁来袭的低级敌人，也可以把双管当墙用，建造速度极短
 block.scatter.description = 玻璃分裂尤其有效
@@ -120,7 +119,6 @@ block.impact-drill.description = 双科技别用
 block.eruption-drill.description = 开采铍和沙子的速度远远超过爆破钻头，加氰效率更高
 block.reinforced-conduit.description = 传输速度约为6000/s
 block.reinforced-liquid-router.description = 串联时速度根据串联数量递减
-block.reinforced-bridge-conduit.description = 跨越任意地形或建筑物传输流体。
 block.reinforced-pump.description = 全游单位液体泵送速度最快的泵
 block.tungsten-wall.description = 拥有护甲，常用于双科刷墙，抵挡天帝子弹时很有效
 block.tungsten-wall-large.description = 拥有护甲，常用于双科刷墙，抵挡天帝子弹时十分有效
@@ -170,7 +168,7 @@ unit.retusa.description = 修复能力非常强
 unit.oxynoe.description = 可以给附近的单位上超频buff
 unit.cyerce.description = 配合戟鲸使用
 unit.aegires.description = 最强海辅，超强单位百分比修复
-unit.navanax.description = 后勤单位，不要上前线喵
+unit.navanax.description = 后勤单位，不建议上前线
 
 #Erekir
 unit.stell.description = 血量很高
@@ -185,5 +183,3 @@ unit.collaris.description = 最远射程66格，分裂弹全命中60格，但是
 unit.elude.description = 全游陆地单位机动性最强，适合骚扰
 unit.avert.description = 全游血量密度最大单位，给所有没有穿透的炮塔以当头一棒
 unit.obviate.description = 有了它就有了制空权，爆发伤害可观
-
-
