--- a/assets/bundles/bundle-mdtx.properties
+++ b/assets/bundles/bundle-mdtx.properties
@@ -81,8 +81,6 @@ settingV2.autoFill.fillStorageBlock.name = 允许往容器/仓库内填充
 settingV2.autoFill.fillDistribution.name = 允许往塑钢/桥中填充
 
 settingV2.coreItems.category = 队伍资源显示
-settingV2.coreItems.enable.name = 总开关
-settingV2.coreItems.columns.name = 显示列数
 settingV2.coreItems.showItem.name = 显示核心物品
 settingV2.coreItems.showUnit.name = 显示单位数量
 settingV2.coreItems.showPlan.name = 显示建筑中数量
@@ -115,7 +113,6 @@ settingV2.entityRender.payloadPreview.name = 载荷拾起预览
 settingV2.gameUI.category = 游戏界面
 settingV2.gameUI.spawnerWaveDisplay.name = 出生点波次信息显示
 settingV2.gameUI.transportScan.name = 物流扫描模式
-settingV2.gameUI.newWaveInfoDisplay.name = 新波次显示(中上部)
 settingV2.gameUI.menuFloatText.name = 首页浮动标语
 settingV2.gameUI.announceRtsTake.name = 当其他人分走当前控制的单位时，消息提示
 settingV2.gameUI.deadOverlay.name = 死亡时(观战)仍然显示界面 [orange]可能闪退
@@ -185,6 +182,8 @@ settingV2.overlayUI.quickTool.name = 快速设置
 settingV2.overlayUI.mappingTool.name = 作图工具箱
 settingV2.overlayUI.advanceBuildTool.name = 批量建筑工具
 settingV2.overlayUI.teamsStats.name = 多队伍资源显示
+settingV2.overlayUI.coreItems.name = 队伍资源显示
+settingV2.overlayUI.waveInfo.name = 新波次信息显示
 
 
 
