✨ MetricCollector 增加帧ID，用于判断崩溃时机

--- a/assets/bundles/bundle-mdtx.properties
+++ b/assets/bundles/bundle-mdtx.properties
@@ -26,7 +26,7 @@ mdtx.share.unit = {0}：数量 {1}，上限 {2}
 commit.recentUpdates = 近期更新
 commit.title = 提交记录
 
-overlayUI.tips = [gold]Tips:[]\n1. PC默认快捷键为Z，可在设置中修改。\n2. 面板锁定后可在游戏内显示。\n3. 并非所有面板需要锁定，左侧开关可当作折叠按钮。\n4. 面板锁定后内容区域保持不变，贴边时会自动吸附。
+overlayUI.tips = [gold]Tips:[]\n1. PC默认快捷键为Z，可在设置中修改。\n2. 面板锁定后可在游戏内显示。\n3. 并非所有面板需要锁定，左侧开关可当作折叠按钮。\n4. 面板锁定后内容区域保持不变，吸附会自动跟随。\n5. 手机可在窗口设置里面调整缩放，信息展示可以缩写，按钮可以放大。
 #end UI
 
 status.slow.name = 缓慢
