✨ 支持向下兼容v153协议

--- a/assets/bundles/bundle-mdtx.properties
+++ b/assets/bundles/bundle-mdtx.properties
@@ -27,6 +27,7 @@ commit.recentUpdates = 近期更新
 commit.title = 提交记录
 
 overlayUI.tips = [gold]Tips:[]\n1. PC默认快捷键为Z，可在设置中修改。\n2. 面板锁定后可在游戏内显示。\n3. 并非所有面板需要锁定，左侧开关可当作折叠按钮。\n4. 面板锁定后内容区域保持不变，吸附会自动跟随。\n5. 手机可在窗口设置里面调整缩放，信息展示可以缩写，按钮可以放大。
+forceJoin.tips = [gold]MDTX[]: 目标版本可能兼容，你可以选择伪装版本强制加入。\n如果出现[red]网络错误[]或其他问题，表示无法兼容。\n\nTIPS: 向下兼容(v146-当前版本)是MDTX独有特性哦。
 #end UI
 
 status.slow.name = 缓慢
