--- a/assets/bundles/bundle-mdtx.properties
+++ b/assets/bundles/bundle-mdtx.properties
@@ -73,6 +73,7 @@ stat.ammo_capacity = 子弹容量
 #SettingsV2
 settings.category.settingV2 = [gold]MindustryX
 settingV2.reset = [red]恢复默认设置
+settingV2.onlyModified = 只看已修改的设置
 
 settingV2.autoFill.category = 快速装填
 settingV2.autoFill.cooldown.name = 操作冷却(ms)
