--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,7 +31,7 @@ jobs:
           git config --global user.name "github_actions"
           echo "RELEASE_TAG=${GITHUB_REF_NAME}-build" >> $GITHUB_ENV
           echo "RELEASE_TAG=${GITHUB_REF_NAME}-build"
-          echo "RELEASE_VERSION=$(date +'%Y.%m.%d').X${GITHUB_RUN_NUMBER}-${GITHUB_REF_NAME}" >> $GITHUB_ENV
+          echo "RELEASE_VERSION=$(date +'%Y.%m.%d').B${GITHUB_RUN_NUMBER}" >> $GITHUB_ENV
           
           echo "${{ secrets.KEYSTORE_BASE64 }}" | openssl enc -d -base64 -in - -out bekeystore.jks
       - name: Build
@@ -60,8 +60,6 @@ jobs:
       - name: Release
         uses: softprops/action-gh-release@v2.0.2
         with:
-          repository: TinyLake/MindustryX-work
-          token: ${{secrets.PUBLISH_TOKEN}}
           tag_name: ${{ env.RELEASE_TAG }}
           name: ${{ env.RELEASE_VERSION }}
           target_commitish: ${{github.sha}}
