--- a/assets/bundles/bundle-mdtx.properties
+++ b/assets/bundles/bundle-mdtx.properties
@@ -128,8 +128,8 @@ settingV2.gameUI.researchViewer.name = 科技树透视器
 settingV2.gameUI.extendedCommandTable.name = RTS扩展按钮
 settingV2.gameUI.overlayButton.name = OverlayUI按钮[grey]推荐PC使用快捷键Z
 
-settingV2.blockInventoryWidth.name = 建筑物品栏与物品配置栏行数
-settingV2.blockInventoryWidth.description = 核心物品栏，分类器物品配置栏
+settingV2.additionInventoryColumns.name = 额外建筑物品栏与物品配置栏列数
+settingV2.additionInventoryColumns.description = 核心物品栏，分类器物品配置栏
 settingV2.minimapSize.name = 小地图大小
 settingV2.staticShieldsBorder.name = 静止力墙边界
 settingV2.allUnlocked.name = 显示所有内容(含隐藏)
