--- a/assets/bundles/bundle-mdtx.properties
+++ b/assets/bundles/bundle-mdtx.properties
@@ -128,12 +128,11 @@ settingV2.gameUI.researchViewer.name = 科技树透视器
 settingV2.gameUI.extendedCommandTable.name = RTS扩展按钮
 settingV2.gameUI.overlayButton.name = OverlayUI按钮[grey]推荐PC使用快捷键Z
 
-settingV2.additionInventoryColumns.name = 额外建筑物品栏与物品配置栏列数
-settingV2.additionInventoryColumns.description = 核心物品栏，分类器物品配置栏
+settingV2.additionInventoryColumns.name = 更宽的选择栏(额外列数)
+settingV2.additionInventoryColumns.description = 涉及核心物品栏、建筑物品栏与物品配置栏、编辑器方块栏等
 settingV2.minimapSize.name = 小地图大小
 settingV2.staticShieldsBorder.name = 静止力墙边界
 settingV2.allUnlocked.name = 显示所有内容(含隐藏)
-settingV2.editorBrush.name = 编辑器界面每行建筑数
 settingV2.noPlayerHitBox.name = 取消玩家自身的碰撞 [gray]轻微作弊
 settingV2.arcTurretPlaceCheck.name = 炮台放置时显示禁建范围
 settingV2.arcTurretPlacementItem.name = 炮台显示不同弹药射程
