✨ 新的独立的 标记与分享 面板

--- a/assets/bundles/bundle-mdtx.properties
+++ b/assets/bundles/bundle-mdtx.properties
@@ -186,6 +186,7 @@ settingV2.overlayUI.teamsStats.name = 多队伍资源显示
 settingV2.overlayUI.coreItems.name = 队伍资源显示
 settingV2.overlayUI.waveInfo.name = 新波次信息显示
 settingV2.overlayUI.controlGroup.name = RTS编组面板
+settingV2.overlayUI.markAndShare.name = 标记与分享
 
 settingV2.debug.category = 特殊设置(不保证稳定性)
 settingV2.debug.renderSort.name = 渲染排序
