--- a/assets/bundles/bundle-mdtx.properties
+++ b/assets/bundles/bundle-mdtx.properties
@@ -26,8 +26,6 @@ mdtx.share.unit = {0}：数量 {1}，上限 {2}
 commit.recentUpdates = 近期更新
 commit.title = 提交记录
 
-database.patched = 已被内容包修改
-
 overlayUI.tips = [gold]Tips:[]\n1. PC默认快捷键为Z，可在设置中修改。\n2. 面板锁定后可在游戏内显示。\n3. 并非所有面板需要锁定，左侧开关可当作折叠按钮。\n4. 面板锁定后内容区域保持不变，吸附会自动跟随。\n5. 手机可在窗口设置里面调整缩放，信息展示可以缩写，按钮可以放大。
 forceJoin.tips = [gold]MDTX[]: 目标版本可能兼容，你可以选择伪装版本强制加入。\n如果出现[red]网络错误[]或其他问题，表示无法兼容。\n\nTIPS: 向下兼容(v146-当前版本)是MDTX独有特性哦。
 #end UI
@@ -40,6 +38,11 @@ status.invincible.name = 无敌
 status.fast.name = 迅捷
 
 #StatExt
+category.combat = 战斗
+category.moreContent.name = 更多内容适配
+category.movement = 移动
+category.support = 支援
+
 stat.can_overdrive = 能否超速
 stat.cost = 建造时间花费
 stat.health_scaling = 建筑血量系数
@@ -214,6 +217,7 @@ bar.reloadDetail = 装填：{0}%
 bar.warmupDetail = 充能：{0}%
 bar.ammoDetail = 弹药：{0}/{1}
 
+
 marker.Mark.name = 标记
 marker.Gather.name = 集合
 marker.Attack.name = 攻击
@@ -227,24 +231,8 @@ keybind.toggle_unit.name = 切换单位显示
 keybind.focusLogicController.name = 锁定当前控制的处理器
 keybind.placeRouterReplacement.name = 传送带快速替换(路由器/桥)
 
-# 学术特色翻译
-ability.energyfield.maxtargets = [lightgray]最大目标: [white]{0}
-ability.energyfield.sametypehealmultiplier = [lightgray]同类回复: [white]{0}%
-bar.drilltierreq = 需要{0}级的钻头(当前{1}级)
-block.armored-duct.name = 装甲运输管
-block.large-shield-projector.name = 大型护盾投影
-rules.waitForWaveToEnd = 等待波次结束[gray]所有敌人死亡后才会开始下一波次
-schematic.tagged = {0} 个带标签的蓝图
-unit.incite.name = 策动(激发)
-unit.obviate.name = 消散(影逝)
-unit.quell.name = 遏止(终结)
-unit.disrupt.name = 悲怆(瓦解)
-ability.liquidregen = 液体回血
 
-# ARC增加或补充
-ability.moveeffect = 移动特效
-bar.drillcantmine = 当前钻头不能挖掘此矿物
-block.fracture.name = 破裂
+# ARC设置
 category.arcAddTurretInfo.name = 更多炮台属性
 category.arcAddUnitInfo.name = 更多单位属性
 category.arcCDisplayBlock.name = 建筑显示
@@ -255,27 +243,7 @@ category.arcCgamewindow.name = 游戏界面
 category.arcMassDriverInfo.name = 质驱引导线
 category.arcPlayerEffect.name = 玩家炫酷特效
 category.arcWeakCheat.name = 弱作弊功能
-category.combat = 战斗
-category.moreContent.name = 更多内容适配
-category.movement = 移动
-category.support = 支援
-content.planet.name = 星球
-content.weather.name = 天气
-revealedblocks = 显示建筑
-rules.aiCoreSpawn = 核心生成AI
-rules.canGameOver = 能否自动结束游戏[gray](如果没有其他结束游戏的方法，不推荐开启)
-rules.cheat = 作弊模式
-rules.coreDestroyClear = 核心被破坏清理附近建筑
-rules.disableOutsideArea = 禁用场外区域
-rules.dynamicColor = 战争迷雾颜色-曾探索
-rules.hiddenBuildItems = 隐藏需要所选材料建造的建筑
-rules.infiniteAmmo = 单位无限子弹
-rules.logicUnitBuild = 逻辑控制单位建造
-rules.staticColor = 战争迷雾颜色-未探索
-rules.title.arcExperimental = 隐藏设置[red](实验性功能，可能影响稳定性)
-rules.unitPayloadUpdate = 单位携带的方块会工作
-rules.winWave = 胜利波次  [gray](到达指定波次后自动停止)
-schematic.preview = 预览
+
 setting.alwaysShowUnitRTSAi.name = 单位：执行的RTS命令
 setting.arcAlwaysTeamColor.name = 玩家列表：总是绘制队伍颜色
 setting.arcBuildInfo.name = [cyan]建造范围
@@ -311,16 +279,50 @@ setting.unitWeaponRangeAlpha.name = 单位武器射程：不透明度
 setting.unitWeaponTargetLine.name = 单位武器目标
 setting.unitbuildplan.name = 单位：建造序列显示
 settings.arc = 学术功能
+
+# ARC增加
+bar.drillcantmine = 当前钻头不能挖掘此矿物
+revealedblocks = 显示建筑
+rules.aiCoreSpawn = 核心生成AI
+rules.canGameOver = 能否自动结束游戏[gray](如果没有其他结束游戏的方法，不推荐开启)
+rules.cheat = 作弊模式(无限火力)
+rules.coreDestroyClear = 核心被破坏清理附近建筑
+rules.disableOutsideArea = 禁用场外区域
+rules.dynamicColor = 战争迷雾颜色-已探索区域[gold]X[]
+rules.infiniteAmmo = 单位无限子弹 [gray](不建议关闭)
+rules.staticColor = 战争迷雾颜色-未探索区域[gold]X[]
+rules.title.arcExperimental = 隐藏设置[red](实验性功能，可能影响稳定性)
+rules.unitPayloadUpdate = 单位携带的方块会工作
+rules.winWave = 胜利波次[gold]X[]  [gray](到达指定波次后自动停止)
+schematic.preview = 预览
 settings.maxMsgRecorded.name = 最大聊天记录数
 shield.phaseboost = [stat]+{0}[lightgray] 格 [stat]+{1}[] 护盾容量
 shield.regenspeed = [stat]{0}[lightgray]x 回复速度
-team.neoplastic.name = 瘤
+
+# 原版额外内容
+content.planet.name = 星球
+content.weather.name = 天气
 unit.anthicus-missile.name = 天灾导弹
 unit.disrupt-missile.name = 悲怆导弹
 unit.quell-missile.name = 遏止导弹
 unit.scathe-missile.name = 创伤导弹
-waves.duplicate = 复制
-waves.group = 组
-waves.group.effect = 添加状态
-waves.group.items = 添加物品
-waves.group.payloads = 添加载荷
+team.neoplastic.name = 瘤
+
+# 学术特色翻译(无需翻译其他语言)
+ability.energyfield.maxtargets = [lightgray]最大目标: [white]{0}
+ability.energyfield.sametypehealmultiplier = [lightgray]同类回复: [white]{0}%
+bar.drilltierreq = 需要{0}级的钻头(当前{1}级)
+block.armored-duct.name = 装甲运输管
+block.large-shield-projector.name = 大型护盾投影
+rules.waitForWaveToEnd = 等待波次结束[gray]所有敌人死亡后才会开始下一波次
+schematic.tagged = {0} 个带标签的蓝图
+unit.incite.name = 策动(激发)
+unit.obviate.name = 消散(影逝)
+unit.quell.name = 遏止(终结)
+unit.disrupt.name = 悲怆(瓦解)
+ability.liquidregen = 液体回血
+
+# 临时中文翻译(无需翻译其他语言)
+database.patched = 已被内容包修改
+rules.logicunitbuild = 允许逻辑控制单位建造
+
