--- a/assets/bundles/bundle-mdtx.properties
+++ b/assets/bundles/bundle-mdtx.properties
@@ -325,4 +325,444 @@ ability.liquidregen = 液体回血
 # 临时中文翻译(无需翻译其他语言)
 database.patched = 已被内容包修改
 rules.logicunitbuild = 允许逻辑控制单位建造
+mdtx.rules.possessionAllowed = 允许控制单位
+mdtx.rules.disableRebuild = 禁用重建
+mdtx.rules.enableInfiniteAmmoAll = 所有队伍开启无限火力
+mdtx.rules.disableInfiniteAmmoAll = 所有队伍关闭无限火力
+mdtx.rules.moreTeamOptions = 更多队伍设置
+mdtx.rules.moreTeamSelect = 更多队伍选择
+mdtx.rules.customBackground = 自定义背景[lightgray](需要设置空地板)
+mdtx.rules.bgZoom = 放缩
+mdtx.rules.bgPosX = 位置x
+mdtx.rules.bgPosY = 位置y
+mdtx.rules.bgPosZ = 位置z
+mdtx.waves.toggleDisplayMode = 切换显示模式
+mdtx.editor.centerHint = 右键画笔图标以及其他图标弹出的高级绘制选项是X端特有功能哦\nRight-click the brush icon and other icons to open advanced drawing options; this is a MindustryX-only feature.
+mdtx.editor.otherTeams = [violet]其他队伍
+mdtx.editor.grid = 辅助线：
+mdtx.editor.brush = 笔刷：
+mdtx.waves.legend = \uE86D 单位数量；\uE813 单位血+盾；\uE810 buff后血+盾；\uE86E 预估DPS
+mdtx.waves.waveIndex = 第[accent]{0}[]波
+mdtx.waves.noEnemies = 该波次没有敌人
+mdtx.waves.loadMore = 加载更多波次
+mdtx.waves.carryItem = 携带物品[gold]X[]:
+mdtx.waves.carryItemDenied = [red]该单位不可携带物品
+mdtx.waves.carryPayload = 携带载荷[gold]X[]:
+mdtx.waves.carryPayloadDenied = [red]该单位不可携带载荷
+mdtx.logic.convertFailed = [orange]警告：转换失败，请输入正确格式
+mdtx.logic.discardChanges = [orange]丢弃更改
+mdtx.logic.confirmDiscard = 确认丢弃?
+mdtx.logic.jumpLine = [gold]跳转行号:[] {0}
+mdtx.unit.payload = 装载：{0}/{1} {2}
+mdtx.unit.stat.hp = 血量
+mdtx.unit.stat.dmg = 伤害
+mdtx.unit.stat.rld = 攻速
+mdtx.unit.stat.spd = 移速
+mdtx.unit.stat.bld = 建速
+mdtx.unit.stat.drag = 阻力
+mdtx.unit.stat.arm = 装甲
+mdtx.unit.mineLevelFormat = @级
+mdtx.weapon.range = [lightgray]武器范围: [stat]{0}[]格
+mdtx.weapon.rotateSpeed = [lightgray]旋转速度: [stat]{0}[]°/s
+mdtx.weapon.rotateLimit = [lightgray]旋转范围: [stat]{0}[] {1}
+mdtx.content.shareBrief = ♐简
+mdtx.content.shareDetail = ♐详
+mdtx.database.unlock = 解禁
+mdtx.forceJoin.join = 强制加入
+mdtx.keybind.unbind = 取消绑定
+mdtx.planet.sectorName = 区块名称
+mdtx.research.prereqMissing = [red]未满足前置科技
+mdtx.research.prereqLine = {0}\n[red]未满足前置科技
+mdtx.schematics.archive = 蓝图档案馆
+mdtx.schematics.converter = 图片转换器
+mdtx.schematics.converterWithIcons = 图片转换器{0}{1}{2}
+mdtx.schematics.techTree = 科技树：
+mdtx.schematics.assistFilter = 辅助筛选：
+mdtx.schematics.canBuildTip = 可建造(核心有此类资源+地图未禁用)
+mdtx.schematics.contains = 蓝图包含：
+mdtx.schematics.mustContainTip = 蓝图需包含此建筑
+mdtx.schematics.filterMode = [orange]蓝图筛选模式[white]:蓝图必须包含 {0}
+mdtx.schematics.shareChat = 聊天分享蓝图
+mdtx.schematics.copyAdvanced = 复制到剪贴板(含介绍)
+mdtx.schematics.fromServer = 来自服务器的蓝图
+mdtx.schematics.fromPlayer = 来自{0}的蓝图
+mdtx.schematics.autoTag = 自动标签
+mdtx.schematics.logicCopied = 已复制逻辑代码
+mdtx.hud.enterMarkMode = 进入标记模式
+mdtx.hud.teamPrefix = 前缀添加/t
+mdtx.hud.lockLastMark = 锁定上个标记点
+mdtx.hud.more = 更多
+mdtx.hud.scale = 缩放: {0}
+mdtx.hud.enemyCores = 敌人核心：[orange]{0}
+mdtx.hud.wave = 波次：[orange]{0}
+mdtx.rts.highHealth = 高血量单位
+mdtx.rts.lowHealth = 低血量单位
+mdtx.rts.attackUnit = 进攻性单位
+mdtx.rts.supportUnit = 辅助性单位
+mdtx.rts.airUnit = 飞行单位
+mdtx.rts.landUnit = 陆军单位
+mdtx.rts.navalUnit = 海军单位
+mdtx.rts.select = RTS控制器：选择{0}！
+mdtx.rts.remove = RTS控制器：移除{0}！
+mdtx.player.copiedName = 已复制昵称：{0}
+mdtx.bar.charge = 充能: {0} / {1}
+mdtx.bar.boost = 超速：{0}
+mdtx.bar.drillSpeed = 挖掘速度：{0}{1}/s
+mdtx.apk.installFailed = 安装APK失败
+mdtx.stat.buildingDamage = {0}[lightgray]x建筑伤害
+mdtx.stat.range = [lightgray]射程 {0} [lightgray]格
+mdtx.stat.reloadRate = {0}[lightgray]x射速
+mdtx.stat.pierceFalloff = {0}%衰减
+mdtx.stat.pierceUnlimited = 无限
+mdtx.stat.pierceTimes = {0}x
+mdtx.stat.pierceLabel = 穿透[lightgray]
+mdtx.stat.pierceBoth = 建筑与单位
+mdtx.stat.pierceBuilding = 建筑
+mdtx.stat.pierceUnit = 单位
+mdtx.stat.pierceElectric = [stat](电性)
+mdtx.stat.pierce = {0}穿透[lightgray]{1}{2}
+mdtx.stat.homing = [stat]追踪[lightgray]~[]{0}°/s[lightgray]~[]{1}[lightgray]格
+mdtx.stat.emp.summary = [stat]EMP~{0}[lightgray]格[]~[white]\uE810[]{1}%/[white]\uE86D[]{2}%~[white]\uF899[][green]{3}%[]/[negstat]{4}%[]
+mdtx.stat.emp.powerDamage = [stat]对敌方电网建筑造成{0}%子弹伤害
+mdtx.stat.emp.unitDamage = [stat]对敌方单位造成{0}%子弹伤害
+mdtx.stat.emp.allyBoost = [stat]对我方耗电建筑超速至{0}%
+mdtx.stat.emp.enemySlow = [stat]对敌方电网建筑减速至{0}%
+mdtx.stat.lightningDamage = 闪电~[stat]{0}[]伤害~
+mdtx.stat.lightningLengthRange = [stat]{0}~{1}[]长度
+mdtx.stat.lightningLength = [stat]{0}[]长度
 
+
+
+# hardcoded ui texts extracted from source
+mdtx.ui.records_n =  条记录，如下：\n
+mdtx.ui.the_currently_selected_area_is_empty_please_use_f_to_plan_the_area = 当前选定区域为空，请通过F规划区域
+mdtx.ui.sync_a_wave = 同步一波
+mdtx.ui.miner_ai_ore_filter = minerAI-矿物筛选器
+mdtx.ui.blueprint_code_n = 蓝图代码：\n
+mdtx.ui.mode = （模式：
+mdtx.ui.copied_print_buffer_n_arg = 复制信息版\n@
+mdtx.ui.invalid_background_image = 背景图片无效:
+mdtx.ui.message_center = 中央监控室
+mdtx.ui.lock = 锁定
+mdtx.ui.event_map_load = 事件~载入地图
+mdtx.ui.logic_helper_x = 逻辑辅助器[gold]X[]
+mdtx.ui.if_you_can_t_stand_it_anymore_just_surrender = 受不了，直接投降？
+mdtx.ui.shortcut_observer_mode = 观
+mdtx.ui.original_size = 原始大小
+mdtx.ui.current_unit_cannot_build = [red]当前单位不可建筑
+mdtx.ui.unit = 单位：
+mdtx.ui.zoom = 缩放
+mdtx.ui.add_prefix_t = 前缀添加/t
+mdtx.ui.observer_mode = 观察者模式
+mdtx.ui.shortcut_unit_render = 兵
+mdtx.ui.export = 导出
+mdtx.ui.air_only = 仅对空
+mdtx.ui.logic_notice = 逻辑~通报
+mdtx.ui.share_wave_information = 分享波次信息
+mdtx.ui.name = 名称
+mdtx.ui.wave_in_prefix = 还有
+mdtx.ui.warning_image_may_be_too_large_please_try_compressing_image = [orange]警告：图片可能过大，请尝试压缩图片
+mdtx.ui.all_players = 全部玩家
+mdtx.ui.icon = 图标
+mdtx.ui.bullet_rendering = 子弹显示
+mdtx.ui.failed_to_read_image_please_try_another_image_n = 读取图片失败，请尝试更换图片\n
+mdtx.ui.mark_player = 标记~玩家
+mdtx.ui.chat_history_exceeding_the_limit_will_be_cleared_when_loading_the_map = 超出限制的聊天记录将在载入地图时清除
+mdtx.ui.wave = 波
+mdtx.ui.please_use_java_17_or_higher_to_run_mindustryx = )。请使用Java 17或更高版本运行MindustryX。
+mdtx.ui.player_name = 玩家名:
+mdtx.ui.randomly_generated_within_this_range_near_the_target_point = 在目标点附近的这个范围内随机生成
+mdtx.ui.on = 开启
+mdtx.ui.introduction = 简介： 
+mdtx.ui.slow_the_flow_of_time_to_half = 将时间流速放慢到一半
+mdtx.ui.ore_info = 矿物信息
+mdtx.ui.shortcut_fog = 雾
+mdtx.ui.check_for_updates = 自动更新
+mdtx.ui.always_on = 一直开启
+mdtx.ui.exported_in_game_chat_history = ] 导出的游戏内聊天记录
+mdtx.ui.allowed_range_2_9999 = 允许的范围：2~9999
+mdtx.ui.clear_all_core_resources = 清空核心的所有资源
+mdtx.ui.arc_image_converter = arc-图片转换器
+mdtx.ui.artboard = 画板++ 
+mdtx.ui.radar_toggle = 雷达开关
+mdtx.ui.current_map_name = *** 当前地图名称: 
+mdtx.ui.ui_toolkit = ui大全
+mdtx.ui.ring_cross = 圆十字
+mdtx.ui.please_don_t_tag_too_often = 请不要频繁标记!
+mdtx.ui.message_arg_js_starts_with_script = 消息(@js 开头为脚本)
+mdtx.ui.mark_map_location = 标记地图位置
+mdtx.ui.temporary_status = <瞬间状态>
+mdtx.ui.blueprint_name = 蓝图名：
+mdtx.ui.unit_factory_x = 单位工厂-X
+mdtx.ui.the_blueprint_code_is_too_long_please_click_the_link_to_view_it = 蓝图代码过长，请点击链接查看
+mdtx.ui.ground_only = 仅对地
+mdtx.ui.flash_on_change = 变动闪烁
+mdtx.ui.show_all = 全部显示
+mdtx.ui.reset = 重置
+mdtx.ui.shortcut_server_info = 版
+mdtx.ui.shield = [yellow]护盾：
+mdtx.ui.spawn_range = 生成范围：
+mdtx.ui.click_the_screen_to_return = [green]点击屏幕返回
+mdtx.ui.team_id = 队伍ID:
+mdtx.ui.refresh_interval = 刷新间隔
+mdtx.ui.export_chat_history = 导出聊天记录
+mdtx.ui.scan_mode = 扫描模式
+mdtx.ui.arc_ai_configurator = ARC-AI设定器
+mdtx.ui.generated_label_2 = 已
+mdtx.ui.resistance = [purple]阻力
+mdtx.ui.load_unit = 装载单位
+mdtx.ui.unit_factory = 单位工厂
+mdtx.ui.tiles = 格
+mdtx.ui.you_were = [gold]你被[white] 
+mdtx.ui.zoom_zoom = 缩放:  
+mdtx.ui.automatically_refresh_variables = 自动刷新变量
+mdtx.ui.fog_of_war = 战争迷雾
+mdtx.ui.maximum_storage_of_chat_history_too_high_may_cause_lag = 最大储存聊天记录(过高可能导致卡顿)：
+mdtx.ui.show_all_message_blocks = 信息板全显示
+mdtx.ui.attack_no_border = 攻击去边框
+mdtx.ui.arg_shield_capacity_arg_grid_arg_recovery_arg_s_cooldown = @盾容~@格~@恢复~@s冷却
+mdtx.ui.staging_area = 暂存区
+mdtx.ui.there_are_no_enemies_in_this_wave = 该波次没有敌人
+mdtx.ui.shortcut_surrender_vote = [white]法
+mdtx.ui.current_wave = *** 当前波次: 
+mdtx.ui.construction_suspended = 暂停建造
+mdtx.ui.waves = 波次： 
+mdtx.ui.hide_all_buildings = 隐藏全部建筑
+mdtx.ui.cancel = 取消
+mdtx.ui.preview_releases_n_faster_updates_new_features_bug_fixes = 预览版(更新更快,新功能体验,BUG修复)
+mdtx.ui.open_playback_file = 打开回放文件
+mdtx.ui.copied_successfully = 复制成功:
+mdtx.ui.minimap = 小地图显示
+mdtx.ui.sandbox = 沙盒
+mdtx.ui.build_speed = [accent]建速
+mdtx.ui.recording_ended = 录制结束
+mdtx.ui.chat = 聊天
+mdtx.ui.team_range = 队伍区域
+mdtx.ui.wave_info = 波次信息
+mdtx.ui.the_java_version_is_too_low_and_not_supported = Java版本过低，不受支持(
+mdtx.ui.defender_ai = 保护AI
+mdtx.ui.recording_error = 录制出错!
+mdtx.ui.show_building_status_only = 只显示建筑状态
+mdtx.ui.current_game_speed_arg_times = 当前游戏速度：@倍
+mdtx.ui.pause_logic_game_execution = 暂停逻辑(游戏)运行
+mdtx.ui.return_to_original_speed = 恢复原速
+mdtx.ui.air_x = ,空x
+mdtx.ui.flight_mode = 飞行模式
+mdtx.ui.automatically_save_as_blueprint = 自动保存为蓝图
+mdtx.ui.built_in_prefix = [内置]
+mdtx.ui.item = 物品
+mdtx.ui.speed_up_time_to_2x = 将时间流速加快到两倍
+mdtx.ui.enter_the_conveyor_belt = 进入传送带
+mdtx.ui.blueprint_cost = 蓝图造价：
+mdtx.ui.scaled_size = 缩放后大小
+mdtx.ui.mark_coordinates = 标记~坐标
+mdtx.ui.tip_all_schematics_containing_processors = TIP: 所有包含处理器的蓝图
+mdtx.ui.shortcut_wall_shadow = 墙
+mdtx.ui.panels_currently_unavailable = 当前不可用的面板:
+mdtx.ui.select_and_import_pictures_which_can_be_converted = 选择并导入图片，可将其转成画板、像素画或是逻辑画
+mdtx.ui.stable_releases = 正式版
+mdtx.ui.more_teams = 更多队伍选择
+mdtx.ui.set_target = 设置目标
+mdtx.ui.movement_speed = [cyan]移速
+mdtx.ui.frame_rate_lock_mode_enabled_ncurrent_frame_rate_lock_arg = 已开启帧率锁定模式\n当前帧率锁定：@
+mdtx.ui.server_ip = 服务器ip:
+mdtx.ui.current_selection_is_empty_select_a_block_in_the_inventory = [yellow]当前选中物品为空，请在物品栏选中建筑
+mdtx.ui.off = 关闭
+mdtx.ui.shortcut_message_center = 信
+mdtx.ui.index = 序号
+mdtx.ui.current_map_arg = 当前地图:@
+mdtx.ui.release_notes = 发布说明
+mdtx.ui.clone = 克隆
+mdtx.ui.saved_to_clipboard = 已保存至剪贴板
+mdtx.ui.recording_arg = 录制中: @
+mdtx.ui.there_are_too_many_buildings_to_avoid_lag_and_only_keep_the_first_1000_plans = [yellow]建筑过多，避免卡顿，仅保留前1000个规划
+mdtx.ui.load_building = 装载建筑
+mdtx.ui.generated_label = [orange]已
+mdtx.ui.canvas = 画板 
+mdtx.ui.unlimited = 无限制
+mdtx.ui.buildings = 建筑：
+mdtx.ui.auto_attack = 自动攻击
+mdtx.ui.playback_length = 回放长度:
+mdtx.ui.liquids = 液体
+mdtx.ui.all = 全部
+mdtx.ui.replay_stats = 回放统计
+mdtx.ui.hp = [acid]血量
+mdtx.ui.pause_time = 暂停时间
+mdtx.ui.restore_current_wave = 恢复当前波次
+mdtx.ui.arg_arg_ndistance_arg = @,@\n距离: @
+mdtx.ui.successfully_selected_a_total_of = 成功选取共 
+mdtx.ui.pixel_art = 像素画 
+mdtx.ui.terrain_blueprint = 地形蓝图
+mdtx.ui.each_cell_absorbs_arg_s_arg_arg_arg_s_and_returns_blood_maximum_arg_s = 每格吸收@/s@@~@/s回血~最大@/s
+mdtx.ui.attack_speed = [violet]攻速
+mdtx.ui.toggle_your_team_s_cheat = 开关自己队的无限火力
+mdtx.ui.generate_quantity = 生成数量:
+mdtx.ui.unique = 独一无二
+mdtx.ui.drop_payload = 丢下载荷
+mdtx.ui.clear = 清空
+mdtx.ui.reset_all_links = 重置所有链接
+mdtx.ui.editor = 编辑器
+mdtx.ui.attack = 攻击
+mdtx.ui.select_image_png = 选择图片[white](png)
+mdtx.ui.hitbox_overlay = 碰撞箱显示
+mdtx.ui.logic_announcement = 逻辑~公告
+mdtx.ui.team = 队伍：
+mdtx.ui.self_destruct = 自杀
+mdtx.ui.copied_variable_name_n_arg = 复制变量名\n@
+mdtx.ui.ore_count_surface_wall = 矿物矿(地表/墙矿)
+mdtx.ui.you_are_already_on_the_latest_version = 你已是最新版本，不需要更新！
+mdtx.ui.hue_mode = 色调函数: 
+mdtx.ui.load_self = 装载自己
+mdtx.ui.auto_fill = 一键装填
+mdtx.ui.arc_ore_statistics = ARC-矿物统计
+mdtx.ui.extract_code_from_schematic = 从蓝图中选择代码
+mdtx.ui.shortcut_bullet_render = 弹
+mdtx.ui.fixed_size = 固定大小
+mdtx.ui.command = 指令
+mdtx.ui.color = 颜色
+mdtx.ui.flash_on_variable_change = 变量变动闪烁
+mdtx.ui.radar_scanning = >> 雷达扫描中 <<
+mdtx.ui.basic = 基础对比
+mdtx.ui.set_target_wave = 设定查询波次
+mdtx.ui.path = 路径
+mdtx.ui.ui_icon_library = UI图标大全
+mdtx.ui.mods_enabled =  | mod启用
+mdtx.ui.poked_you_check_the_message_dialog =  [gold]戳了一下，请注意查看信息框哦~
+mdtx.ui.this_is_a_cheat_feature_njump_to_the = [red]这是一个作弊功能[]\n快速跳转到目标波次(不刷兵)
+mdtx.ui.current_frame_rate_locked_arg = 当前帧率锁定：@
+mdtx.ui.failed_to_read_playback = 读取回放失败!
+mdtx.ui.unit_rendering = 兵种显示
+mdtx.ui.carried_item = 携带物品:
+mdtx.ui.health_label = [red]血量：
+mdtx.ui.refresh_edited_logic = 更新编辑的逻辑
+mdtx.ui.shared_by = 分享者：
+mdtx.ui.unlock_and_allow_all_blocks = 显示并允许建造所有物品
+mdtx.ui.arg_s_arg_tiles = @s~@格
+mdtx.ui.load_map = 载入地图： 
+mdtx.ui.placeholder_x = 倍
+mdtx.ui.spawned = [orange]生成！
+mdtx.ui.below_is_mdtx = 下面是[MDTX-
+mdtx.ui.team_selector = 队伍选择器
+mdtx.ui.mark_mode_tap_the_screen_to_place_a_mark = [cyan]标记模式,点击屏幕标记.
+mdtx.ui.view_recording_info = 查看录制信息
+mdtx.ui.remove_logic_lock = 移除逻辑锁定
+mdtx.ui.shortcut_scan_mode = 扫
+mdtx.ui.armor = [teal]装甲
+mdtx.ui.please_use_java_17_or_higher_to_run = )。请使用Java 17或更高版本运行MindustryX。\n[grey]该警告不存在设置，请更新Java版本。
+mdtx.ui.miner_ai = 矿机AI
+mdtx.ui.the_map_has_arg_world_processors_arg_instruction_lines_and_arg_characters = 地图共有@个世处，总共@行指令，@个字符
+mdtx.ui.logic_camera_lock_removed = 已移除逻辑视角锁定
+mdtx.ui.build_area = 建造区域
+mdtx.ui.zoom_x = 缩放: x
+mdtx.ui.wave_settings = 波次设定
+mdtx.ui.no_command_entered = 未输入指令
+mdtx.ui.block_rendering = 建筑显示
+mdtx.ui.builder_ai = 重建AI
+mdtx.ui.spawns_units_that_fly = [orange]生成的单位会飞起来
+mdtx.ui.arc_message_center = ARC-中央监控室
+mdtx.ui.game_resumed = 已继续游戏
+mdtx.ui.selection_range = 选择范围
+mdtx.ui.select_code = 选择代码
+mdtx.ui.tap_the_screen_to_capture_coordinates = [green]点击屏幕采集坐标
+mdtx.ui.this_is_a_message_from_mdtx = 这是一条来自 MDTX-
+mdtx.ui.add_team = 添加队伍
+mdtx.ui.before_adding_new_instructions_please_save_the_edited_instructions_first = [yellow]添加新指令前，请先保存编辑的指令
+mdtx.ui.you_were_poked_please_pay_attention_to_the_information_box = [orange]你被戳了一下，请注意查看信息框哦~
+mdtx.ui.global_range = 全局检查
+mdtx.ui.no_permission_to_edit_view_only = [yellow]当前无权编辑，仅供查阅
+mdtx.ui.cross = 十字
+mdtx.ui.shortcut_hitbox = 箱
+mdtx.ui.x_scan_speed = 倍搜索速度
+mdtx.ui.display_name = 显示名
+mdtx.ui.replay_not_loaded = 未加载回放!
+mdtx.ui.updated_edited_logic = [orange]已更新编辑的逻辑！
+mdtx.ui.power = 电力：
+mdtx.ui.unlock = 解禁
+mdtx.ui.cheat = 无限火力
+mdtx.ui.player_build_range = 玩家建造区
+mdtx.ui.damage = [red]伤害
+mdtx.ui.pick_up_payload = 捡起载荷
+mdtx.ui.fx = 效
+mdtx.ui.share_unit_count = 分享单位数量
+mdtx.ui.upload_failed_try_again = 上传失败，再重试一下？
+mdtx.ui.kotlin_language_standard_library = Kotlin语言标准库
+mdtx.ui.ring = 虚圆
+mdtx.ui.saved_blueprint = 已保存蓝图：
+mdtx.ui.command_mode = 指挥模式
+mdtx.ui.force_boost = 强制助推
+mdtx.ui.permanent_status = <永久状态>
+mdtx.ui.frame_rate_simulation = 帧率模拟
+mdtx.ui.lock_the_last_marked_point = 锁定上个标记点
+mdtx.ui.effects_library = 特效大全
+mdtx.ui.share_inventory_status = 分享库存情况
+mdtx.ui.server_msg = 服务器信息
+mdtx.ui.size = 大小：
+mdtx.ui.toggle = 开关
+mdtx.ui.auto_refresh_variables = 变量自动更新
+mdtx.ui.vanilla = 原版
+mdtx.ui.no = 第
+mdtx.ui.fill_core_resources = 填满核心的所有资源
+mdtx.ui.force_skip_waves = 强制跳波
+mdtx.ui.event_wave = 事件~波次
+mdtx.ui.hide_logic_helper = 隐藏逻辑辅助器
+mdtx.ui.failed_to_create_replay = 创建回放出错!
+mdtx.ui.detached_camera = 视角脱离玩家
+mdtx.ui.squared = 平方对比
+mdtx.ui.add_panel = 添加面板
+mdtx.ui.add_destroyed_buildings_to_build_queue = 在建造列表加入被摧毁建筑
+mdtx.ui.surrender_vote = 法国军礼
+mdtx.ui.packet_count = 数据包总数：
+mdtx.ui.shortcut_block_render = 块
+mdtx.ui.lightning_arg_probability_arg_damage_arg_length_arg_x_speed = 闪电@概率~@伤害~@长度 @x速度
+mdtx.ui.could_not_check_for_updates_nplease_try_again_later = 检查更新失败，请稍后再试
+mdtx.ui.open_release_page = 打开发布页面
+mdtx.ui.rules = 规则：
+mdtx.ui.replay_creation_time = 回放创建时间:
+mdtx.ui.share_log_n = 的分享记录\n
+mdtx.ui.sec = 秒
+mdtx.ui.copied_this_chat_record = 已导出本条聊天记录
+mdtx.ui.wall_shadow_rendering = 墙体阴影显示
+mdtx.ui.server_info_build = 服务器信息版
+mdtx.ui.instant = 瞬间完成
+mdtx.ui.total_arg_arg_arg_arg_tile_radius = 总计@@@~@格半径
+mdtx.ui.frame_rate_lock_mode_turned_off_ncurrent_game_speed_arg_times = 已关闭帧率锁定模式\n当前游戏速度：@倍
+mdtx.ui.spawn_team = 生成队伍:
+mdtx.ui.share_power_status = 分享电力情况
+mdtx.ui.copied_memory_n = [cyan]复制内存[white]\n 
+mdtx.ui.logic_art_website = 逻辑画网站 
+mdtx.ui.contains_ground_x = 包含(地×
+mdtx.ui.waves_suffix = 波, 
+mdtx.ui.god_mode = 创世神
+mdtx.ui.single_player_map_tools_only = 警告：该页功能主要供单机作图使用
+mdtx.ui.spawn_location = 生成位置:
+mdtx.ui.mindustryx_version = MindustryX | 版本号 
+mdtx.ui.repair_ai = 修复AI
+mdtx.ui.n_took_units = \n[white]分走了单位: 
+mdtx.ui.place_replace = 放置/替换
+mdtx.ui.effects_rendering = 特效显示
+mdtx.ui.rally = 集合
+mdtx.ui.download_and_install_update = 自动下载更新
+mdtx.ui.load_replay_file = 加载回放文件
+mdtx.ui.playback_version = 回放版本:
+mdtx.ui.copied_variable_attributes_n_arg = 复制变量属性\n@
+mdtx.ui.find_blocks = 查找方块
+mdtx.ui.paused = 已暂停
+mdtx.ui.hourglass = 沙漏：
+mdtx.ui.blueprint_code_link = 蓝图代码链接：
+mdtx.ui.template.atPlayer = <AT>戳了{0}[white]一下，并提醒他留意对话框
+mdtx.ui.template.currentVersion = 当前版本号: {0}
+mdtx.ui.template.exportCount = 成功选取共{0}条记录，如下：\n
+mdtx.ui.template.exportHeader = 下面是[MDTX-{0}] 导出的游戏内聊天记录
+mdtx.ui.template.exportMap = *** 当前地图名称: {0}(模式: {1})\n
+mdtx.ui.template.itemSelectionHeight = {0} 行
+mdtx.ui.template.itemSelectionWidth = {0} 列
+mdtx.ui.template.javaWarnDialog = Java版本 {0} 过低，不受支持。\n[grey]该警告不存在设置，请更新Java版本。
+mdtx.ui.template.javaWarnLog = Java版本 {0} 过低，不受支持。请使用Java 17或更高版本运行MindustryX。
+mdtx.ui.template.newVersion = [green]发现新版本[]: {0}
+mdtx.ui.template.shareHeader = 这是一条来自 MDTX-{0} 的分享记录\n
+mdtx.ui.template.shareCode = <ARCxMDTX><Schem>[black]一坨兼容[] {0}
+mdtx.ui.template.toggleState = {0}: {1}
+mdtx.ui.template.waveContains = 包含(地×{0},空x{1}):
+mdtx.ui.template.waveEta = (还有{0}波, {1})
+mdtx.ui.template.waveTitle = 第{0}波
+mdtx.ui.template.atNoticeFrom = [gold]你被[white]{0}[gold]戳了一下，请注意查看信息框哦~
