♻️ i18n 根据review修正文案空格与英文表达

--- a/assets/bundles/bundle-mdtx.properties
+++ b/assets/bundles/bundle-mdtx.properties
@@ -434,7 +434,7 @@ mdtx.stat.lightningLength = [stat]{0}[]长度
 
 
 # hardcoded ui texts extracted from source
-mdtx.ui.records_n =  条记录，如下：\n
+mdtx.ui.records_n = 条记录，如下：\n
 mdtx.ui.the_currently_selected_area_is_empty_please_use_f_to_plan_the_area = 当前选定区域为空，请通过F规划区域
 mdtx.ui.sync_a_wave = 同步一波
 mdtx.ui.miner_ai_ore_filter = minerAI-矿物筛选器
@@ -473,7 +473,7 @@ mdtx.ui.please_use_java_17_or_higher_to_run_mindustryx = )。请使用Java 17或
 mdtx.ui.player_name = 玩家名:
 mdtx.ui.randomly_generated_within_this_range_near_the_target_point = 在目标点附近的这个范围内随机生成
 mdtx.ui.on = 开启
-mdtx.ui.introduction = 简介： 
+mdtx.ui.introduction = 简介：
 mdtx.ui.slow_the_flow_of_time_to_half = 将时间流速放慢到一半
 mdtx.ui.ore_info = 矿物信息
 mdtx.ui.shortcut_fog = 雾
@@ -751,6 +751,7 @@ mdtx.ui.hourglass = 沙漏：
 mdtx.ui.blueprint_code_link = 蓝图代码链接：
 mdtx.ui.template.atPlayer = <AT>戳了{0}[white]一下，并提醒他留意对话框
 mdtx.ui.template.currentVersion = 当前版本号: {0}
+mdtx.ui.template.introduction = 简介：{0}
 mdtx.ui.template.exportCount = 成功选取共{0}条记录，如下：\n
 mdtx.ui.template.exportHeader = 下面是[MDTX-{0}] 导出的游戏内聊天记录
 mdtx.ui.template.exportMap = *** 当前地图名称: {0}(模式: {1})\n
