♻️ i18n 去除空格依赖并改为模板拼接

--- a/assets/bundles/bundle-mdtx.properties
+++ b/assets/bundles/bundle-mdtx.properties
@@ -483,9 +483,9 @@ mdtx.ui.exported_in_game_chat_history = ] 导出的游戏内聊天记录
 mdtx.ui.allowed_range_2_9999 = 允许的范围：2~9999
 mdtx.ui.clear_all_core_resources = 清空核心的所有资源
 mdtx.ui.arc_image_converter = arc-图片转换器
-mdtx.ui.artboard = 画板++ 
+mdtx.ui.artboard = 画板++
 mdtx.ui.radar_toggle = 雷达开关
-mdtx.ui.current_map_name = *** 当前地图名称: 
+mdtx.ui.current_map_name = *** 当前地图名称:
 mdtx.ui.ui_toolkit = ui大全
 mdtx.ui.ring_cross = 圆十字
 mdtx.ui.please_don_t_tag_too_often = 请不要频繁标记!
@@ -513,8 +513,8 @@ mdtx.ui.resistance = [purple]阻力
 mdtx.ui.load_unit = 装载单位
 mdtx.ui.unit_factory = 单位工厂
 mdtx.ui.tiles = 格
-mdtx.ui.you_were = [gold]你被[white] 
-mdtx.ui.zoom_zoom = 缩放:  
+mdtx.ui.you_were = [gold]你被[white]
+mdtx.ui.zoom_zoom = 缩放: 
 mdtx.ui.automatically_refresh_variables = 自动刷新变量
 mdtx.ui.fog_of_war = 战争迷雾
 mdtx.ui.maximum_storage_of_chat_history_too_high_may_cause_lag = 最大储存聊天记录(过高可能导致卡顿)：
@@ -524,9 +524,9 @@ mdtx.ui.arg_shield_capacity_arg_grid_arg_recovery_arg_s_cooldown = @盾容~@格~
 mdtx.ui.staging_area = 暂存区
 mdtx.ui.there_are_no_enemies_in_this_wave = 该波次没有敌人
 mdtx.ui.shortcut_surrender_vote = [white]法
-mdtx.ui.current_wave = *** 当前波次: 
+mdtx.ui.current_wave = *** 当前波次:
 mdtx.ui.construction_suspended = 暂停建造
-mdtx.ui.waves = 波次： 
+mdtx.ui.waves = 波次：
 mdtx.ui.hide_all_buildings = 隐藏全部建筑
 mdtx.ui.cancel = 取消
 mdtx.ui.preview_releases_n_faster_updates_new_features_bug_fixes = 预览版(更新更快,新功能体验,BUG修复)
@@ -578,7 +578,7 @@ mdtx.ui.recording_arg = 录制中: @
 mdtx.ui.there_are_too_many_buildings_to_avoid_lag_and_only_keep_the_first_1000_plans = [yellow]建筑过多，避免卡顿，仅保留前1000个规划
 mdtx.ui.load_building = 装载建筑
 mdtx.ui.generated_label = [orange]已
-mdtx.ui.canvas = 画板 
+mdtx.ui.canvas = 画板
 mdtx.ui.unlimited = 无限制
 mdtx.ui.buildings = 建筑：
 mdtx.ui.auto_attack = 自动攻击
@@ -590,8 +590,8 @@ mdtx.ui.hp = [acid]血量
 mdtx.ui.pause_time = 暂停时间
 mdtx.ui.restore_current_wave = 恢复当前波次
 mdtx.ui.arg_arg_ndistance_arg = @,@\n距离: @
-mdtx.ui.successfully_selected_a_total_of = 成功选取共 
-mdtx.ui.pixel_art = 像素画 
+mdtx.ui.successfully_selected_a_total_of = 成功选取共
+mdtx.ui.pixel_art = 像素画
 mdtx.ui.terrain_blueprint = 地形蓝图
 mdtx.ui.each_cell_absorbs_arg_s_arg_arg_arg_s_and_returns_blood_maximum_arg_s = 每格吸收@/s@@~@/s回血~最大@/s
 mdtx.ui.attack_speed = [violet]攻速
@@ -611,7 +611,7 @@ mdtx.ui.self_destruct = 自杀
 mdtx.ui.copied_variable_name_n_arg = 复制变量名\n@
 mdtx.ui.ore_count_surface_wall = 矿物矿(地表/墙矿)
 mdtx.ui.you_are_already_on_the_latest_version = 你已是最新版本，不需要更新！
-mdtx.ui.hue_mode = 色调函数: 
+mdtx.ui.hue_mode = 色调函数:
 mdtx.ui.load_self = 装载自己
 mdtx.ui.auto_fill = 一键装填
 mdtx.ui.arc_ore_statistics = ARC-矿物统计
@@ -626,8 +626,8 @@ mdtx.ui.basic = 基础对比
 mdtx.ui.set_target_wave = 设定查询波次
 mdtx.ui.path = 路径
 mdtx.ui.ui_icon_library = UI图标大全
-mdtx.ui.mods_enabled =  | mod启用
-mdtx.ui.poked_you_check_the_message_dialog =  [gold]戳了一下，请注意查看信息框哦~
+mdtx.ui.mods_enabled = | mod启用
+mdtx.ui.poked_you_check_the_message_dialog = [gold]戳了一下，请注意查看信息框哦~
 mdtx.ui.this_is_a_cheat_feature_njump_to_the = [red]这是一个作弊功能[]\n快速跳转到目标波次(不刷兵)
 mdtx.ui.current_frame_rate_locked_arg = 当前帧率锁定：@
 mdtx.ui.failed_to_read_playback = 读取回放失败!
@@ -638,7 +638,7 @@ mdtx.ui.refresh_edited_logic = 更新编辑的逻辑
 mdtx.ui.shared_by = 分享者：
 mdtx.ui.unlock_and_allow_all_blocks = 显示并允许建造所有物品
 mdtx.ui.arg_s_arg_tiles = @s~@格
-mdtx.ui.load_map = 载入地图： 
+mdtx.ui.load_map = 载入地图：
 mdtx.ui.placeholder_x = 倍
 mdtx.ui.spawned = [orange]生成！
 mdtx.ui.below_is_mdtx = 下面是[MDTX-
@@ -728,16 +728,16 @@ mdtx.ui.total_arg_arg_arg_arg_tile_radius = 总计@@@~@格半径
 mdtx.ui.frame_rate_lock_mode_turned_off_ncurrent_game_speed_arg_times = 已关闭帧率锁定模式\n当前游戏速度：@倍
 mdtx.ui.spawn_team = 生成队伍:
 mdtx.ui.share_power_status = 分享电力情况
-mdtx.ui.copied_memory_n = [cyan]复制内存[white]\n 
-mdtx.ui.logic_art_website = 逻辑画网站 
+mdtx.ui.copied_memory_n = [cyan]复制内存[white]\n
+mdtx.ui.logic_art_website = 逻辑画网站
 mdtx.ui.contains_ground_x = 包含(地×
-mdtx.ui.waves_suffix = 波, 
+mdtx.ui.waves_suffix = 波,
 mdtx.ui.god_mode = 创世神
 mdtx.ui.single_player_map_tools_only = 警告：该页功能主要供单机作图使用
 mdtx.ui.spawn_location = 生成位置:
-mdtx.ui.mindustryx_version = MindustryX | 版本号 
+mdtx.ui.mindustryx_version = MindustryX | 版本号
 mdtx.ui.repair_ai = 修复AI
-mdtx.ui.n_took_units = \n[white]分走了单位: 
+mdtx.ui.n_took_units = \n[white]分走了单位:
 mdtx.ui.place_replace = 放置/替换
 mdtx.ui.effects_rendering = 特效显示
 mdtx.ui.rally = 集合
@@ -750,19 +750,26 @@ mdtx.ui.paused = 已暂停
 mdtx.ui.hourglass = 沙漏：
 mdtx.ui.blueprint_code_link = 蓝图代码链接：
 mdtx.ui.template.atPlayer = <AT>戳了{0}[white]一下，并提醒他留意对话框
+mdtx.ui.template.copiedMemory = [cyan]复制内存[white]\n {0}
 mdtx.ui.template.currentVersion = 当前版本号: {0}
+mdtx.ui.template.currentWave = *** 当前波次: {0}
 mdtx.ui.template.introduction = 简介：{0}
+mdtx.ui.template.failedReadImage = 读取图片失败，请尝试更换图片\n{0}
 mdtx.ui.template.exportCount = 成功选取共{0}条记录，如下：\n
 mdtx.ui.template.exportHeader = 下面是[MDTX-{0}] 导出的游戏内聊天记录
+mdtx.ui.template.labelWithEmoji = {0} {1}
+mdtx.ui.template.loadMap = 载入地图：{0}
 mdtx.ui.template.exportMap = *** 当前地图名称: {0}(模式: {1})\n
 mdtx.ui.template.itemSelectionHeight = {0} 行
 mdtx.ui.template.itemSelectionWidth = {0} 列
 mdtx.ui.template.javaWarnDialog = Java版本 {0} 过低，不受支持。\n[grey]该警告不存在设置，请更新Java版本。
 mdtx.ui.template.javaWarnLog = Java版本 {0} 过低，不受支持。请使用Java 17或更高版本运行MindustryX。
 mdtx.ui.template.newVersion = [green]发现新版本[]: {0}
+mdtx.ui.template.windowTitle = MindustryX | 版本号 {0} | mod启用{1}/{2}
 mdtx.ui.template.shareHeader = 这是一条来自 MDTX-{0} 的分享记录\n
 mdtx.ui.template.shareCode = <ARCxMDTX><Schem>[black]一坨兼容[] {0}
 mdtx.ui.template.toggleState = {0}: {1}
+mdtx.ui.template.waveEvent = 波次：{0} | {1}
 mdtx.ui.template.waveContains = 包含(地×{0},空x{1}):
 mdtx.ui.template.waveEta = (还有{0}波, {1})
 mdtx.ui.template.waveTitle = 第{0}波
